2012-05-29  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove duplication of logic for disabling selected warnings related to C++11

        This is already handled in unix/default_post.prf

        Reviewed by Simon Hausmann.

        * WTF.pro:

2012-05-27  Darin Adler  <darin@apple.com>

        Fix an incorrect assertion in Vector::remove
        https://bugs.webkit.org/show_bug.cgi?id=87612

        Reviewed by Dan Bernstein.

        * wtf/Vector.h: There's no good reason to disallow calling remove
        with a size of 0, even when the position is at the end of the vector,
        so changed the two-argument Vector::remove assertion to assert that
        the position is <= size rather than < size.

2012-05-27  Yoshifumi Inoue  <yosin@chromium.org>

        [WTF] Introduce UINT64_C to MathExtras.h
        https://bugs.webkit.org/show_bug.cgi?id=87485

        Reviewed by Kent Tamura.

        * wtf/MathExtras.h:

2012-05-25  Filip Pizlo  <fpizlo@apple.com>

        weakCompareAndSwap should work on Windows
        https://bugs.webkit.org/show_bug.cgi?id=87549

        Reviewed by Jessie Berlin.

        * wtf/Atomics.h:
        (WTF):
        (WTF::weakCompareAndSwap):

2012-05-24  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        cti_vm_throw gets kicked out by gcc 4.6 -flto
        https://bugs.webkit.org/show_bug.cgi?id=56088

        Reviewed by Darin Adler.

        Define REFERENCED_FROM_ASM to __attribute__((used)) on GCC.

        * wtf/Compiler.h:

2012-05-23  Darin Adler  <darin@apple.com>

        Optimize iteration of empty hash tables
        https://bugs.webkit.org/show_bug.cgi?id=87215

        Reviewed by Geoffrey Garen.

        Iteration of empty hash tables was showing up on simple page loading
        profiles due to the use of hash tables in the
        NodeListsNodeData::invalidateCaches and
        NodeListsNodeData::invalidateCachesThatDependOnAttributes functions.